--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/dlacreme/pls-api#readme",
   "dependencies": {
+    "@types/pg": "^7.11.2",
     "aurelia-dependency-injection": "1.5.1",
     "bcrypt": "3.0.6",
     "body-parser": "1.19.0",
@@ -49,7 +50,7 @@
     "passport-facebook-token": "3.3.0",
     "passport-google-oauth20": "2.0.0",
     "passport-local": "1.0.0",
-    "pg": "7.12.1",
+    "pg": "^7.12.1",
     "reflect-metadata": "0.1.13",
     "ts-md5": "1.2.7",
     "ts-node": "8.0.2",
@@ -66,6 +67,7 @@
     "@types/nodemailer": "6.2.2",
     "@types/passport": "1.0.1",
     "@types/winston": "2.4.4",
+    "@types/pg": "7.11.2",
     "jest": "24.9.0",
     "jest-cli": "24.9.0",
     "mock-express": "1.3.0",
